# LIteCOW

./: .buildinfo  .gitignore  LICENSE  Makefile  README.md  client_usage.html  extra.css  genindex.html  index.html  install.html  litecow_modules.html  mkdocs.yml  models.html  objects.inv  overview.html  py-modindex.html  sandbox.html  search.html  searchindex.js
_sources/: client_usage.md.txt  index.md.txt  install.md.txt  overview.md.txt  sandbox.md.txt
_sources/litecow/: litecow.common.rst.txt  litecow.rst.txt  modules.rst.txt
_sources/models/: litecow_models.rst.txt  modules.rst.txt
deployment/icow/: Chart.yaml  values.yaml
deployment/icow/charts/knative-serving/: Chart.yaml  values.yaml
deployment/icow/charts/knative-serving/crds/: 1-serving-crds.yaml  2-serving-core.yaml
deployment/icow/charts/knative-serving/templates/: 2-serving-core.yaml  certmanager-addon.yaml  kourier.yaml  serving-default-domain.yaml  serving-hpa-addon.yaml
deployment/icow/charts/minio/: values.yaml
deployment/icow/templates/: inference-knative-service.yaml  secrets.yaml
docker/dev/litecow_models/: Dockerfile  docker-compose.yml
docker/docs/: Dockerfile
docker/gpu-server/: Dockerfile
docker/server/: Dockerfile
docs/: mkdocs.yml
docs/content/: index.md  models.md  overview.md  sandbox.md  setup.md
docs/content/overrides/: home.html
docs/content/overrides/partials/: footer.html
docs/source/: client_usage.md  conf.py  install.md  litecow_modules.md  models.md  sandbox.md
icow_model_import/: Makefile  README.md  docker-compose.yml  pyproject.toml
icow_model_import/docker/: Dockerfile
icow_model_import/icow_model_import/: __init__.py  icow_model_import.py  initialize_s3.py
icow_model_import/scripts/: initialize_minio.py  startup.sh
icow_model_import/tests/: conftest.py  test_icow_model_import.py  test_initialize_s3.py
litecow/: litecow.common.html  litecow.html  modules.html
litecow_client/: pyproject.toml
litecow_common/litecow_common/: litecow_pb2_grpc.py
litecow_server/: pyproject.toml
models/: litecow_models.html  modules.html
sandbox/: Dockerfile  entrypoint.sh  requirements.txt  sandbox.py  setup.sh
scripts/: install.sh  mkdocs_startup.sh
src/litecow/: Makefile  pyproject.toml
src/litecow/litecow/: client.py  server.py
src/litecow/litecow/common/: common.py  litecow.proto  litecow_pb2.py  litecow_pb2_grpc.py
src/litecow_client/litecow_client/: client.py
src/litecow_common/: Makefile  pyproject.toml
src/litecow_common/litecow_common/: litecow.proto  litecow_pb2.py  litecow_pb2_grpc.py
src/litecow_models/: pyproject.toml
src/litecow_models/litecow_models/: cli.py  model.py  model_import.py
src/litecow_models/tests/: conftest.py  test_initialize_s3.py  test_model.py  test_model_import.py
src/litecow_models/tests/data/: simple_onnx_model.onnx
src/litecow_server/: pyproject.toml
src/litecow_server/litecow_server/: service.py
