[tool.poetry]
name = "litecow_common"
version = "0.1.0"
description = ""
authors = ["Striveworks"]

[tool.poetry.dependencies]
python = "*"
grpcio = "^1.33.2"
protobuf = "*"

[tool.poetry.dev-dependencies]
grpcio-tools = "^1.34.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
