[tool.poetry]
name = "litecow_models"
version = "0.1.0"
description = ""
authors = ["Julian Medina <jmedina@striveworks.us>"]

[tool.poetry.dependencies]
python = ">=3.6.2,<4"
boto3 = "^1.17.23"
boto3-stubs = "^1.17.23.0"
mypy-boto3-s3 = "^1.17.23.0"
torch = "^1.7.0"
onnxruntime = "^1.7.0"
requests = "^2.25.1"
tqdm = "^4.59.0"
urllib3 = "^1.26.3"
click = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
litecow = "litecow_models.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
